# ham

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  ham-ascii.txt
android-deps/: CMakeLists.txt
cmake/: CPUFeatures.cmake  EmbedFile.cmake  FindFreeImage.cmake  FindGMP.cmake  FindMPFR.cmake  FindMagic.cmake  FindNCURSES.cmake  FindReadline.cmake  FindSteamworks.cmake  StrHelpers.cmake  toolchain-cross-mingw-w64.cmake
comp/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  engine.md  header.html  index.html.in  mainpage.md  runtime.md
engine/: CMakeLists.txt  README.md
engine/client/: CMakeLists.txt  client.h  main.cpp  net.cpp  video.cpp  vulkan.cpp  vulkan.h  window.cpp
engine/common/: CMakeLists.txt  HamEngineConfig.cmake  HamEngineConfig.cmake.in  argparse.cpp  engine.cpp  engine2.cpp  entity_component.cpp  graph.cpp  model.cpp  net.cpp  subsys.cpp  sys.cpp  types.cpp  world.cpp
engine/common/entity/: draw-instance-component.cpp
engine/common/glsl/: light.frag  light.vert  scene_info.frag  scene_info.vert  screen.frag  screen.vert  voxelize.vert
engine/editor/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  engine_instance.hpp  entites.hpp  fonts.qrc  graph_editor.cpp  graph_editor.hpp  images.qrc  main.cpp  main_window.cpp  main_window.hpp  models.qrc  physics_backend.cpp  physics_backend.hpp  project.cpp  project.hpp  renderer_widget.cpp  renderer_widget.hpp  renderer_widget_gl.cpp  renderer_widget_vulkan.cpp  source_editor.cpp  source_editor.hpp  templates.qrc  util.hpp  vulkan.cpp  welcome_wizard.cpp  welcome_wizard.hpp  window.cpp  window.hpp  world_view.cpp  world_view.hpp
engine/editor/models/: xyz_test.glb
engine/editor/templates/: ham-engine-config.json
engine/editor/templates/scratch/: CMakeLists.txt.in  ham-engine-project.json.in  ham-engine-template.json
engine/editor/templates/scratch/.ham/: engine-template.json
engine/editor/templates/scratch/source/: CMakeLists.txt.in
engine/editor/templates/scratch/source/app/: CMakeLists.txt.in  {{ham_project_name}}_app.cpp.in
engine/editor/templates/scratch/source/include/: {{ham_project_name}}_app.h.in
engine/editor/templates/scratch/src/: CMakeLists.txt.in
engine/include/ham/: engine-object.h  engine-vtable.h  engine.h
engine/include/ham/engine/: argparse.h  config.h.in  entity.h  graph.h  input.h  model.h  net.h  types.h  vm.h  world.h
engine/include/ham/engine/entity/: draw-instance-component.h  transform-component.h
engine/server/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  server.cpp  server.h
include/: ham.h
include/ham/: argpack.h  async.h  audio-object.h  audio.h  buffer.h  camera.h  check.h  colony.h  config.h  config.h.in  dll.h  dso.h  fs.h  functional.h  gl.h  hash.h  image.h  json.h  lex.h  lex.x.h  light.h  log.h  math.h  memory.h  meta.hpp  mime-types.h  net-object.h  net-vtable.h  net.h  noise.h  object.h  octree.h  parse.h  parse.x.h  physics-object.h  physics.h  plugin.h  pp.h  render.h  renderer-object.h  (+14 more)
interpreter/: CMakeLists.txt  main.cpp
lang/: CMakeLists.txt
lang-compiler/: CMakeLists.txt  main.cpp
lang-interpreter/: main.cpp
lang/compiler/: CMakeLists.txt  main.cpp
lang/interpreter/: CMakeLists.txt  main.cpp
lang/lib/: CMakeLists.txt  bytecode.cpp
lib/: CMakeLists.txt  fs.cpp  lex-impl.x.h  lex.cpp  log.cpp  memory.cpp  parse-impl.x.h  parse.cpp  plugin.cpp  str_buffer.cpp  thread.cpp
plugins/: CMakeLists.txt
plugins/audio-oalsoft/: CMakeLists.txt  audio-oalsoft.h  audio_context_oalsoft.cpp  audio_oalsoft.cpp  audio_stream_oalsoft.cpp
plugins/net-gns/: CMakeLists.txt  net-connection-gns.cpp  net-gns.cpp  net-gns.h  net-socket-gns.cpp
plugins/net-steam/: CMakeLists.txt  net-connection-steam.cpp  net-socket-steam.cpp  net-steam.cpp  net-steam.h
plugins/physics-bullet3/: CMakeLists.txt  physics_body_bullet3.cpp  physics_bullet3.cpp  physics_bullet3.h  physics_shape_bullet3.cpp  physics_world_bullet3.cpp
plugins/renderer-gl/: CMakeLists.txt  bone_skin.vert  colors.glsl  draw-group-gl.cpp  light-group-gl.cpp  light.frag  light.vert  renderer-gl.cpp  renderer-gl.hpp  scene_info.frag  scene_info.vert  screen.frag  screen.vert  shader-gl.cpp  voxelize.vert
plugins/renderer-gl/glad/include/glad/: glad.h
plugins/renderer-gl/glad/src/: glad.c
plugins/renderer-vulkan/: CMakeLists.txt  draw_group.cpp  light_group_vulkan.cpp  renderer.cpp  renderer.hpp  screen.frag  screen.vert  shader_vulkan.cpp  vulkan.cpp  vulkan.hpp
runtime/: CMakeLists.txt  HamConfig.cmake  HamConfig.cmake.in  README.md  async-pthread.cpp  audio.cpp  colony.cpp  dll-unix.cpp  dso-unix.cpp  fs.cpp  ham.cpp  image.cpp  json.cpp  lex.cpp  log.cpp  memory.cpp  net.cpp  object.cpp  octree.cpp  parse.cpp  physics.cpp  plugin.cpp  renderer.cpp  settings.cpp  shape.cpp  str_buffer.cpp  thread.cpp  typesys.cpp
test/: CMakeLists.txt  main.cpp  test-buffer.cpp  test-camera.cpp  test-lex.cpp  test-mat.cpp  test-meta.cpp  test-object.cpp  test-octree.cpp  test-parse.cpp  test-quat.cpp  test-transform.cpp  test-typesys.cpp  test-utf.cpp  test.ham  tests.hpp
testgame/: ham.json
utils/: gen-vk.py  voxels.cws
